# src/channels.js
@@ -21,55 +21,26 @@ async function list(ctx) {
 }
 
 async function view(ctx) {
+  const { channelId } = ctx.params;
+  const { anchor = 0 } = ctx.query;
+
   try {
-    const { channelId } = ctx.params;
     dbg(`Viewing one channel #${channelId}`);
     const channel = await db.Channel.findById(channelId).lean().exec();
+    const chunk = await db.ChannelChunk.findOne({ channelId }).lean().exec();
 
-    ctx.body = {
-      ok: true,
-      channel: format(channel),
-    };
-  } catch (e) {
-    ctx.throw(e);
-  }
-}
-
-async function create(ctx) {
-  const { channelId } = ctx.params;
-
-  try {
-    dbg(`Pushing new message to channel #${channelId}`);
-    const { text } = ctx.request.body;
-
-    const message = {
-      _id: db.objectId(),
-      sender: '5bb9dead16b4862b77a1b2db',
-      body: text,
-      createdAt: new Date(),
-    };
-    await new Promise((resolve, reject) => {
-      dbg('Find and update...');
-
-      db.ChannelChunk.updateOne({ channelId }, { $push: { messages: message } }, { upsert: true }, (err, stats) => {
-        if (err) {
-          return reject(err);
-        }
-
-        const { ok } = stats;
-        if (ok) {
-          dbg('Done');
-
-          return resolve();
-        }
-
-        return reject(new Error('Consistency error'));
-      });
+    const anchorISO = new Date(parseInt(anchor, 10)).toISOString();
+    dbg(`Filtering messages by ${anchorISO}`);
+    const messages = (chunk.messages || []).filter(({ createdAt }) => {
+      return createdAt.toISOString() > anchorISO;
     });
 
     ctx.body = {
       ok: true,
-      message: format(message),
+      channel: {
+        ...format(channel),
+        messages: messages.map(format),
+      },
     };
   } catch (e) {
     ctx.throw(e);
@@ -83,7 +54,6 @@ export default (app, baseUrl) => {
 
   router.get('/channels', list);
   router.get('/channels/:channelId', view);
-  router.post('/channels/:channelId/messages', create);
 
   dbg('Mounting channels module...');
   app.use(router.routes());
