# swagger/api.yaml
@@ -85,6 +85,11 @@ paths:
           schema:
             type: string
           description: Channel ID
+        - in: query
+          name: anchor
+          schema:
+            type: integer
+          description: Timestamp notation to filter messages by createdAt
 
       responses:
         '200':
@@ -97,6 +102,31 @@ paths:
             $ref: '#/definitions/ApiResponse'
 
   '/channels/{channelId}/messages':
+    get:
+      tags:
+        - message
+      summary: Get all messages to the channel
+      parameters:
+        - in: path
+          name: channelId
+          schema:
+            type: string
+          description: Channel ID
+        - in: query
+          name: anchor
+          schema:
+            type: integer
+          description: Timestamp notation to filter messages by createdAt
+
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/MessageListResponse'
+        '400':
+          description: bad request
+          schema:
+            $ref: '#/definitions/ApiResponse'
     post:
       tags:
         - message
@@ -255,6 +285,19 @@ definitions:
         type: boolean
       channel:
         $ref: '#/definitions/Channel'
+
+  MessageListResponse:
+    type: object
+    required:
+      - ok
+      - messages
+    properties:
+      ok:
+        type: boolean
+      messages:
+        type: array
+        items:
+          $ref: '#/definitions/Message'
 
   ChannelListResponse:
     type: object
